painel do freelancer finalizado

--- a/cadastro.html
+++ b/cadastro.html
@@ -72,8 +72,8 @@
                 <form class="needs-validation" novalidate>
                     <div class="row">
                         <div class="col-md-5 mb-3">
-                            <label for="country">Atuarei como:</label>
-                            <select class="custom-select d-block w-100" id="estado" required>
+                            <label for="atuacao">Atuarei como:</label>
+                            <select class="custom-select d-block w-100" id="atuacao" required>
                                 <option value="">Escolha...</option>
                                 <option>Eletricista</option>
                                 <option>Encanador</option>
@@ -126,7 +126,7 @@
                             <label for="firstName">Telefone</label>
                             <input type="text" class="form-control" id="cpf" placeholder="O número que o cliente irá contatar" value="" required>
                             <div class="invalid-feedback">
-                                CPF é requerido.
+                                Telefone é requerido.
                             </div>
                         </div>
                         <div class="col-md-6 mb-3">
