--- a/painelFreelancer.html
+++ b/painelFreelancer.html
@@ -77,61 +77,35 @@
                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#anuncio" role="tab" aria-controls="home" aria-selected="true">Anúncio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#editarAnuncio" role="tab" aria-controls="profile" aria-selected="false">Editar</a>
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#editarAnuncio" role="tab" aria-controls="profile" aria-selected="false">Edição</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="contact-tab" data-toggle="tab" href="#assinatura" role="tab" aria-controls="contact" aria-selected="false">Assinatura</a>
             </li>
         </ul>
         <div class="tab-content" id="myTabContent">
+
             <div class="tab-pane fade show active" id="anuncio" role="tabpanel" aria-labelledby="home-tab">
                 <div class="row">
-
                     <!-- Post Content Column -->
                     <div class="col-lg-8">
-
-                        <!-- Preview Image -->
-                        <img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
-
+                        <div class="card ">
+                            <a href="#">
+                                <img class="card-img-top" src="img/joao.jpg" alt="">
+                            </a>
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <a href="#">João Encanador</a>
+                                </h4>
+                                <p class="card-text">Olá, meu nome é João. Trabalho com encanação há 8 anos e sou um profissional extremamente
+                                    lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum
+                                    quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in,
+                                    nesciunt, illum tempora ex quae? Nihil, dolorem!
+                                </p>
+                            </div>
+                        </div>
                         <hr>
 
-                        <!-- Date/Time -->
-                        <p>Posted on January 1, 2017 at 12:00 PM</p>
-
-                        <hr>
-
-                        <!-- Post Content -->
-                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, vero, obcaecati, aut, error quam
-                            sapiente nemo saepe quibusdam sit excepturi nam quia corporis eligendi eos magni recusandae laborum
-                            minus inventore?</p>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, tenetur natus doloremque laborum quos
-                            iste ipsum rerum obcaecati impedit odit illo dolorum ab tempora nihil dicta earum fugiat. Temporibus,
-                            voluptatibus.
-                        </p>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos, doloribus, dolorem iusto blanditiis
-                            unde eius illum consequuntur neque dicta incidunt ullam ea hic porro optio ratione repellat perspiciatis.
-                            Enim, iure!
-                        </p>
-
-                        <blockquote class="blockquote">
-                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-                            <footer class="blockquote-footer">Someone famous in
-                                <cite title="Source Title">Source Title</cite>
-                            </footer>
-                        </blockquote>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, nostrum, aliquid, animi, ut quas
-                            placeat totam sunt tempora commodi nihil ullam alias modi dicta saepe minima ab quo voluptatem
-                            obcaecati?
-                        </p>
-
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum, dolor quis. Sunt, ut, explicabo,
-                            aliquam tenetur ratione tempore quidem voluptates cupiditate voluptas illo saepe quaerat numquam
-                            recusandae? Qui, necessitatibus, est!</p>
-
-                        <hr>
 
                         <!-- Comments Form -->
                         <div class="card my-4">
@@ -141,7 +115,7 @@
                                     <div class="form-group">
                                         <textarea class="form-control" rows="3"></textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <button type="submit" class="btn btn-success">Submit</button>
                                 </form>
                             </div>
                         </div>
@@ -150,10 +124,8 @@
                         <div class="media mb-4">
                             <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
                             <div class="media-body">
-                                <h5 class="mt-0">Commenter Name</h5>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                Donec lacinia congue felis in faucibus.
+                                <h5 class="mt-0">Ana Júlia</h5>
+                                Não tenho do que reclamar, ótimo profissional. Sempre solícito e atencioso.
                             </div>
                         </div>
 
@@ -161,25 +133,21 @@
                         <div class="media mb-4">
                             <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
                             <div class="media-body">
-                                <h5 class="mt-0">Commenter Name</h5>
-                                Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                Donec lacinia congue felis in faucibus.
-
+                                <h5 class="mt-0">Guilherme Estebão</h5>
+                                Além de competente faz um preço camarada, indico o João para aqueles precisam de um serviço de encamento bom e com excelente
+                                custo benefício.
                                 <div class="media mt-4">
                                     <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
                                     <div class="media-body">
-                                        <h5 class="mt-0">Commenter Name</h5>
-                                        Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
-                                        vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
-                                        Donec lacinia congue felis in faucibus.
+                                        <h5 class="mt-0">João Encanador</h5>
+                                        Obrigado, Guilherme. Tenha um ótimo dia.
                                     </div>
                                 </div>
 
                                 <div class="media mt-4">
                                     <img class="d-flex mr-3 rounded-circle" src="http://placehold.it/50x50" alt="">
                                     <div class="media-body">
-                                        <h5 class="mt-0">Commenter Name</h5>
+                                        <h5 class="mt-0">John Galt</h5>
                                         Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in
                                         vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla.
                                         Donec lacinia congue felis in faucibus.
@@ -193,74 +161,118 @@
 
                     <!-- Sidebar Widgets Column -->
                     <div class="col-md-4">
-
-                        <!-- Search Widget -->
-                        <div class="card mb-4">
-                            <h5 class="card-header">Search</h5>
-                            <div class="card-body">
-                                <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search for...">
-                                    <span class="input-group-btn">
-                                        <button class="btn btn-secondary" type="button">Go!</button>
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Categories Widget -->
-                        <div class="card my-4">
-                            <h5 class="card-header">Categories</h5>
-                            <div class="card-body">
-                                <div class="row">
-                                    <div class="col-lg-6">
-                                        <ul class="list-unstyled mb-0">
-                                            <li>
-                                                <a href="#">Web Design</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">HTML</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Freebies</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-lg-6">
-                                        <ul class="list-unstyled mb-0">
-                                            <li>
-                                                <a href="#">JavaScript</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">CSS</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Tutorials</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
+                        <h5>Expiração do Anúncio</h5>
+                        <!-- Progress Widget -->
+                        <div class="progress">
+                            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0"
+                                aria-valuemax="100"></div>
                         </div>
 
                         <!-- Side Widget -->
                         <div class="card my-4">
-                            <h5 class="card-header">Side Widget</h5>
+                            <h5 class="card-header">Notificação</h5>
                             <div class="card-body">
                                 You can put anything you want inside of these side widgets. They are easy to use, and feature the new Bootstrap 4 card containers!
                             </div>
                         </div>
 
+                        <!-- Categories Widget -->
+                        <div class="card my-4">
+                            <h5 class="card-header">Visualização</h5>
+                            <div class="card-body">
+                                <div class="row text-center">
+                                    <div class="col-lg-12">
+                                        <h5>256 visualizações</h5>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
+
                 </div>
+
             </div>
-            <div class="tab-pane fade" id="editarAnuncio" role="tabpanel" aria-labelledby="profile-tab">Editar</div>
-            <div class="tab-pane fade" id="assinatura" role="tabpanel" aria-labelledby="contact-tab">Assinatura.</div>
+            <div class="tab-pane fade" id="editarAnuncio" role="tabpanel" aria-labelledby="profile-tab">
+                <div class="row">
+                    <div class="col-md-4 order-md-2 mb-4">
+                        <img class="img-fluid" src="img/joao.jpg" alt="">
+                        <form action="">
+                            <input type="file" name="pic" accept="image/*">
+                            <input type="submit">
+                        </form>
+                    </div>
+                    <div class="col-md-8 order-md-1">
+                        <h4 class="mb-3">Edite seu anúncio</h4>
+                        <form class="needs-validation" novalidate>
+                            <div class="row">
+                                <div class="col-md-10 mb-3">
+                                    <div class="mb-3">
+                                        <label for="email">Anúncio</label>
+                                        <textarea type="email" class="form-control" id="email" placeholder="O que você faz? Conte mais sobre você."></textarea>
+                                    </div>
+                                </div>
 
-        </div> <!--/.tab-content-->
+                            </div>
 
+                            <div class="row">
+                                <div class="col-md-6 mb-3">
+                                    <label for="firstName">Telefone</label>
+                                    <input type="text" class="form-control" id="cpf" placeholder="O número que o cliente irá contatar" value="" required>
+                                    <div class="invalid-feedback">
+                                        Telefone é requerido.
+                                    </div>
+                                </div>
+                                <div class="col-md-6 mb-3">
+                                    <label for="lastName">Telefone
+                                        <span class="text-muted">(opcional)</span>
+                                    </label>
+                                    <input type="text" class="form-control" id="cnpj" placeholder="O número que o cliente irá contatar" value="">
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-5 mb-3">
+                                    <label for="country">Estado</label>
+                                    <select class="custom-select d-block w-100" id="estado" required>
+                                        <option value="">Escolha...</option>
+                                        <option>Bahia</option>
+                                    </select>
+                                    <div class="invalid-feedback">
+                                        Selecione um estado.
+                                    </div>
+                                </div>
+                                <div class="col-md-4 mb-3">
+                                    <label for="state">Cidade</label>
+                                    <select class="custom-select d-block w-100" id="state" required>
+                                        <option value="">Escolha...</option>
+                                        <option>Jequié</option>
+                                    </select>
+                                    <div class="invalid-feedback">
+                                        Selecione uma cidade.
+                                    </div>
+                                </div>
+                            </div>
+
+                            <hr class="mb-4">
+                            <button class="btn btn-success btn-lg btn-block" type="submit">Salvar</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
     </div>
+
+
+
+
+    <div class="tab-pane fade" id="assinatura" role="tabpanel" aria-labelledby="contact-tab">Assinatura.</div>
+
+
+    <!--/.tab-content-->
+
     <!-- /.container -->
 
     <!-- Footer -->
