--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Serviços
               </a>
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-                <a class="dropdown-item" href="portfolio-1-col.html">Alvenaria</a>
+                <a class="dropdown-item" href="alvenaria.html">Alvenaria</a>
                 <a class="dropdown-item" href="portfolio-2-col.html">Elétrica</a>
                 <a class="dropdown-item" href="portfolio-3-col.html">Hidráulica</a>
                 <a class="dropdown-item" href="portfolio-4-col.html">Jardinagem</a>
@@ -59,10 +59,10 @@
               <a class="nav-link" href="contas.html">Criar conta</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link" data-toggle="modal" data-target="#modal_login" >Entrar</a>
+              <a href="#" class="nav-link" data-toggle="modal" data-target="#modal_login">Entrar</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Sobre</a>
+              <a class="nav-link" href="#">Sobre</a>
             </li>
           </ul>
         </div>
@@ -94,7 +94,7 @@
         <div class="carousel-item" style="background-image: url('img/teste2.jpg')">
           <div class="carousel-caption  d-md-block caption-estilo">
             <h3>Anuncie seu serviço </h3>
-            <a href="#" class="btn btn-success">Cadastrar-me</a>
+            <a href="cadastro.html" class="btn btn-success">Cadastre-se</a>
           </div>
         </div>
 
@@ -163,93 +163,112 @@
     <!-- /.row -->
 
     <!-- Portfolio Section -->
-    <h2>Portfolio Heading</h2>
+    <h2>Anúncios em destaques</h2>
 
     <div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+            <img class="card-img-top" src="img/joao.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project One</a>
+              <a href="#">João da Silva</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt?
-              Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
+            <p class="card-text">Trabalho com encanamento há 8 anos. Amet Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt,
+              illum tempora ex quae? Nihil, dolorem!
+              <br>
+              <strong>Contato: </strong>91912535
+            </p>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+            <img class="card-img-top" src="img/teste4.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Two</a>
+              <a href="#">José Nogueira</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
-              varius vitae.</p>
+            <p class="card-text">Trabalho com encanamento há 8 anos. Amet Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt,
+              illum tempora ex quae? Nihil, dolorem!
+              <br>
+              <strong>Contato: </strong>91912535
+            </p>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+            <img class="card-img-top" src="img/teste.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Three</a>
+              <a href="#">Maria Francisca</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio
-              velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+            <p class="card-text">Trabalho com encanamento há 8 anos. Amet Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt,
+              illum tempora ex quae? Nihil, dolorem!
+              <br>
+              <strong>Contato: </strong>91912535
+            </p>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+            <img class="card-img-top" src="img/joao.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Four</a>
+              <a href="#">João da Silva</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
-              varius vitae.</p>
+            <p class="card-text">Trabalho com encanamento há 8 anos. Amet Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt,
+              illum tempora ex quae? Nihil, dolorem!
+              <br>
+              <strong>Contato: </strong>91912535
+            </p>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+            <img class="card-img-top" src="img/teste4.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Five</a>
+              <a href="#">José Nogueira</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna
-              varius vitae.</p>
+            <p class="card-text">Trabalho com encanamento há 8 anos. Amet Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt,
+              illum tempora ex quae? Nihil, dolorem!
+              <br>
+              <strong>Contato: </strong>91912535
+            </p>
           </div>
         </div>
       </div>
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="#">
-            <img class="card-img-top" src="http://placehold.it/700x400" alt="">
+            <img class="card-img-top" src="img/teste.jpg" alt="">
           </a>
           <div class="card-body">
             <h4 class="card-title">
-              <a href="#">Project Six</a>
+              <a href="#">Maria Francisca</a>
             </h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque earum nostrum suscipit ducimus nihil provident,
-              perferendis rem illo, voluptate atque, sit eius in voluptates, nemo repellat fugiat excepturi! Nemo, esse.</p>
+            <p class="card-text">Trabalho com encanamento há 8 anos. Amet Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt,
+              illum tempora ex quae? Nihil, dolorem!
+              <br>
+              <strong>Contato: </strong>91912535
+            </p>
           </div>
         </div>
       </div>
+
     </div>
     <!-- /.row -->
 
@@ -321,48 +340,52 @@
   </script>
 
 
-      <!-- Modal login-->
-      <form class="modal fade" id="modal_login" method="POST" action="">
+  <!-- Modal login-->
+  <form class="modal fade" id="modal_login" method="POST" action="">
 
-        <div class="modal-dialog">
+    <div class="modal-dialog">
 
-          <div class="modal-content fundo_inscricao">
+      <div class="modal-content fundo_inscricao">
 
-            <div class="modal-header">
+        <div class="modal-header">
 
-              <h5 class="modal-title" id="janelaLabel">
-                Acesse sua conta
-              </h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+          <h5 class="modal-title" id="janelaLabel">
+            Acesse sua conta
+          </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
+        <div class="modal-body">
+
+          <div class="row">
+
+            <div class="form-group col-md-12">
+              <label for="email">
+                <h6>E-mail</h6>
+              </label>
+              <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail" required>
             </div>
 
-            <div class="modal-body">
-
-              <div class="row">
-
-                <div class="form-group col-md-12">
-                  <label for="email"><h6>E-mail</h6></label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Digite seu e-mail" required>
-                </div>
-            
-                <div class="form-group col-md-12">
-                  <label for="senha"><h6>Senha</h6></label>
-                  <input type="password" class="form-control" id="senha" name="senha" placeholder="Digite sua senha" required>
-                </div>
-              </div>
+            <div class="form-group col-md-12">
+              <label for="senha">
+                <h6>Senha</h6>
+              </label>
+              <input type="password" class="form-control" id="senha" name="senha" placeholder="Digite sua senha" required>
             </div>
-
-            <div class="modal-footer">
-              <button type="submit" class="btn btn-success">Entrar</button>
-              <button type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
-            </div>
-
           </div>
         </div>
-      </form>
-      <!-- /.modal -->
+
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-success">Entrar</button>
+          <button type="button" class="btn btn-light" data-dismiss="modal">Cancelar</button>
+        </div>
+
+      </div>
+    </div>
+  </form>
+  <!-- /.modal -->
 
 </body>
 
